[package]
name = "RustEngine"
version = "0.1.0"
authors = ["Brad Duncan <bradkyleduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmex = "0.2"
ndarray = "0.13.0"

[[bin]]
name = "main"
path = "src/bin/run_discrete.rs"