[package]
name = "RustEngine"
version = "0.1.0"
authors = ["Brad Duncan <bradkyleduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmex = "0.2"
ndarray = "0.13.0"
rayon = "1.3.0"
serde_derive = "^1.0.8"
serde = "^1.0.8"

# RKDB fails to install on fresh install: rustup override set nightly
rkdb = {version="0.4", features=["api"]}
priority-queue = "0.7.0"
hashbrown = "0.3"

[[bin]]
name = "main"
path = "src/bin/wss.rs"